# gridpaint

./: .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  README.org  final-blob-path-generator.js  firebase.json  firestore.rules  index.html  package.json  pnpm-lock.yaml  responsive.js  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
3d-models/case-starflower-pendant-short/: case.toml
3d-models/casegen/: casegen.py  footprint.py  geometry2d.py  meshing.py  params.py  preview.py  profiles.py  pyproject.toml  surfaces.py
3d-models/casegen/tests/: conftest.py  test_end_to_end.py  test_footprint.py  test_geometry2d.py  test_meshing.py  test_params.py  test_preview.py  test_profiles.py  test_surfaces.py
docs/: blob-rendering-spec.md  core-engine-spec.md  gridpaint.md  svg-path-generation.md
examples/1/: input.json
examples/2/: input.json
examples/3/: input.json
hebrew-2026-02-23/: svg2dxf.py
hebrew-2026-02-23/dxfs/: hebrew-fancy-frame-layer-1.dxf  hebrew-fancy-frame-layer-5.dxf  hebrew-fancy-frame-layer-6.dxf  hebrew-letterbox-layer-2.dxf  hebrew-letterbox-layer-4.dxf  hebrew-letters-ahava-layer-1.dxf  hebrew-letters-ahava-layer-3.dxf  hebrew-simple-frame-layer-1.dxf  (+2 more)
hebrew-2026-02-26/: ahava-pendant-nested-complete.dxf  ahava-pendant-nested-pt1.dxf  ahava-pendant-nested-pt2.dxf  ahava-pendant-nested-pt3.dxf
old/: gridpaint-todos.md  gridpaint.js  p5.js  package.json  pnpm-lock.yaml  rasterpoint.js
src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
v2/: package.json  pnpm-lock.yaml  tsconfig.json
(+157 files in other folders)
