[project]
name = "casegen"
version = "0.1.0"
description = "Parametric cast-case (body+lid) STL generator for laser-cut pendants"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "shapely>=2.0",
    "triangle==20230923",
    "trimesh>=4.0",
    "ezdxf>=1.1",
    "svgelements>=1.9",
    "matplotlib>=3.8",
    "contourpy>=1.2",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false
